<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.ign.validator</groupId>
	<artifactId>validator</artifactId>
	<packaging>pom</packaging>
	<version>4.0.0-SNAPSHOT</version>
	<name>Validator</name>

	<scm>
		<url>https://github.com/IGNF/validator</url>
		<tag>HEAD</tag>
		<developerConnection>scm:git:git@github.com:IGNF/validator.git</developerConnection>
	</scm>

	<description>
        This program validates data according to a FeatureCatalogue
	</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<!--
		See following page for the required java version
		http://docs.geotools.org/latest/userguide/build/install/jdk.html#
		 -->
		<geotools.version>21.5</geotools.version>
		<log4j.version>2.13.3</log4j.version>
		<jackson.version>2.9.10</jackson.version>
		<jackson.databind.version>2.9.10.5</jackson.databind.version>
		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
		<maven-formatter-plugin.version>2.11.0</maven-formatter-plugin.version>
	</properties>
	<organization>
		<name>IGN - Service RDS</name>
		<url>http://www.ign.fr</url>
	</organization>

	<developers>
		<developer>
			<name>Clément Bouché</name>
			<email>clement.bouche(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
		<developer>
			<name>Florian Cerizay</name>
			<email>florian.cerizay(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
		<developer>
			<name>Mickaël Borne</name>
			<email>mickael.borne(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>CeCILL B License</name>
			<url>http://www.cecill.info/licences/Licence_CeCILL-B_V1-fr.html</url>
		</license>
	</licenses>

	<modules>
		<module>validator-core</module>
		<module>validator-cli</module>
		<module>validator-plugin-cnig</module>
		<module>validator-plugin-dgpr</module>
	</modules>


	<dependencies>
		<!-- Log4J2 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<!-- log4j2 dependency-->
		<dependency>
			<groupId>org.codehaus.woodstox</groupId>
			<artifactId>woodstox-core-asl</artifactId>
			<version>4.4.1</version>
		</dependency>

		<!-- Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.databind.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- jdom -->
		<dependency>
			<groupId>jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>1.0</version>
		</dependency>

		<!-- jaxen (XPath) -->
		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>1.2.0</version>
		</dependency>

		<!-- Apache common-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- Apache common cli -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- Apache common csv -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<!-- TODO upgrade to 1.8 (end of line) -->
			<version>1.8</version>
		</dependency>

		<!-- org.apache.commons.lang -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- geotools -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-shapefile</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- geotools epsg references -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- embedding light database wkt for common CRS -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- jaxb -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.0</version>
		</dependency>

		<!--
		################################################################
			JDBC drivers
		################################################################
		-->

		<!-- Driver SQLite -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.28.0</version>
		</dependency>
		<!-- Drive postgresql -->
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>

		<!--
		################################################################
			JDK 8 libraries
		################################################################
		-->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>

		<!--
		################################################################
			Test dependencies
		################################################################
		-->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.xmlunit</groupId>
			<artifactId>xmlunit-core</artifactId>
			<version>2.6.3</version>
			<scope>test</scope>
		</dependency>

		<!-- mockito -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>

		<!-- JSONAssert -->
		<dependency>
			<groupId>org.skyscreamer</groupId>
			<artifactId>jsonassert</artifactId>
			<version>1.5.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>

		<repository>
			<id>maven</id>
			<name>Maven central repository</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>

		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>

	</repositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
				<version>${maven-formatter-plugin.version}</version>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.2</version>
					<configuration>
						<tagNameFormat>v@{project.version}</tagNameFormat>
					</configuration>
				</plugin>

				<plugin>
					<groupId>net.revelc.code.formatter</groupId>
					<artifactId>formatter-maven-plugin</artifactId>
					<version>${maven-formatter-plugin.version}</version>
					<configuration>
						<configFile>${project.parent.basedir}/eclipse/formatter-config.xml</configFile>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

</project>
